In mp3, got rid of some thread checks from LLNL tutorial.

--- a/machine-problems/mp3/makefile
+++ b/machine-problems/mp3/makefile
@@ -1,6 +1,6 @@
 # makefile
 
-all: dataserver simpleclient llnl_semaphore_test
+all: dataserver simpleclient
 
 reqchannel.o: reqchannel.H reqchannel.C
 	g++ -c -g reqchannel.C
@@ -10,9 +10,6 @@ dataserver: dataserver.C reqchannel.o
 
 semaphore.o: semaphore.H semaphore.C
 	g++ -c -g semaphore.C
-
-llnl_semaphore_test: llnl_semaphore_test.C semaphore.o
-	g++ -g -o llnl_semaphore_test llnl_semaphore_test.C semaphore.o -lpthread 
 
 bounded_buffer.o: bounded_buffer.H bounded_buffer.C semaphore.o
 	g++ -c -g bounded_buffer.C semaphore.o
