Done cleaning mp3, moving to mp4 now.

--- a/machine-problems/mp3/makefile
+++ b/machine-problems/mp3/makefile
@@ -11,9 +11,11 @@ dataserver: dataserver.C reqchannel.o
 semaphore.o: semaphore.H semaphore.C
 	g++ -c -g semaphore.C
 
-bounded_buffer.o: bounded_buffer.H bounded_buffer.C semaphore.o
-	g++ -c -g bounded_buffer.C semaphore.o
+bounded_buffer.o: bounded_buffer.H bounded_buffer.C semaphore.H
+	g++ -c -g bounded_buffer.C
 
 simpleclient: simpleclient.C reqchannel.o semaphore.o bounded_buffer.o
 	g++ -g -o simpleclient simpleclient.C reqchannel.o semaphore.o bounded_buffer.o -lpthread
 
+clean:
+	rm simpleclient dataserver *.o
